# structwake

./: .gitignore  README.md
mlgreens/: README.md  pyproject.toml
mlgreens/examples/MCAE/: mcae.ipynb
mlgreens/examples/processing/: maskencode.ipynb
mlgreens/mlgreens/: __init__.py
mlgreens/mlgreens/data/: __init__.py  encoding.py  greensdata.py  greensgrid.py  greensmasked.py  greenspatches.py  masking.py  scaling.py  splitting.py
mlgreens/mlgreens/models/: __init__.py  cnn.py  mae.py  mcae.py  model.py  mvitae.py
swapy/: README.md  pyproject.toml
swapy/examples/CylSweep/: CylSweep.ipynb
swapy/examples/Ng1990/: Ng1990.ipynb
swapy/swapy/: __init__.py  bunches.py  constants.py
swapy/swapy/_scripts/: __init__.py  runmodel.py
swapy/swapy/structures/: __init__.py  cylinder.py  rectangle.py
